[package]
name = "blur-rs"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[lib]
name = "d3d9"
crate-type = ["cdylib"]

[dependencies]
blur-plugins-core = { git = "https://github.com/tobii-dev/blur-plugins-core" }
# egui = "0.22.0" # For now I'm not using the GUI
# egui-d3d9 = { git = "https://github.com/tobii-dev/egui-d3d9" } # this for has windows 0.51.1 support
log = { version = "0.4.20", features = ["release_max_level_info"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
minhook-sys = "0.1.1"
simplelog = "0.12.1"
windows = { version = "0.51.1", features = ["Win32_Graphics_Direct3D9", "Win32_Foundation", "implement", "Win32_System_Console", "Win32_System_SystemServices", "Win32_Graphics_Gdi", "Win32_Graphics_Direct3D", "Foundation_Numerics", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
windows-dll = "0.4.1"
