[package]
name = "blur-rs"
version = "0.2.1"
edition = "2021"
build = "build.rs"


[lib]
name = "d3d9"
crate-type = ["cdylib"]


[features]
gui = ["dep:egui", "dep:egui-d3d9"]
console = ["windows/Win32_System_Console"]


[dependencies]
#blur-plugins-core = { git = "https://github.com/tobii-dev/blur-plugins-core" }
blur-plugins-core = { path = "../blur-plugins-core" }

log = { version = "0.4.20", features = ["release_max_level_info"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
simplelog = "0.12.1"

minhook-sys = "0.1.1"

windows = { version = "0.52.0", features = ["Win32_Graphics_Direct3D9", "Win32_Foundation", "implement", "Win32_System_SystemServices", "Win32_Graphics_Gdi", "Win32_Graphics_Direct3D", "Foundation_Numerics", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] } # Hi from column 300

windows-dll = "0.4.1"

# Optional dependencies:
egui = { version = "0.23.0", optional = true }
egui-d3d9 = { version = "0.3.7", optional = true }
#egui-d3d9 = { git = "https://github.com/tobii-dev/egui-d3d9", optional = true } # TODO: crates.io egui-d3d9
